--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,8 @@
         <item>Английский</item>
     </string-array>
 
-    <string name="mileage_hint">Your Mileage: %d</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="switch1">Night Mode</string>
+
+
+
 </resources>
