--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,5 @@
 <resources>
     <string name="app_name">CarApp</string>
-    <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment.</string>
-    <string name="hello_second_fragment">Hello second fragment.</string>
 
     <string name="hello_start">Welcome!</string>
     <string name="hello_start_description">This app is made to help you with repairing your car.</string>
@@ -27,16 +18,20 @@
 
     <string name="settings_name">NickName</string>
 
-    <string-array name="languages_array">
-        <item>Русский</item>
-        <item>Румынский</item>
-        <item>Английский</item>
-    </string-array>
-
     <string name="switch1">Night Mode</string>
 
     <string name="night_mode">Night Mode</string>
     <string name="light_mode">Light Mode</string>
 
+    <string name="language">Language</string>
 
+    <string name="RU">Russian</string>
+    <string name="RO">Romanian</string>
+    <string name="EN">English</string>
+
+    <string name="mileage_main">Your mileage:</string>
+
+    <string name="text_intro_info">Enter Car name and Mileage</string>
+    <string name="carname_intro">Enter Car Name</string>
+    <string name="mileage_intro">Enter Mileage</string>
 </resources>
